--- a/Taller3_Punto1/Ejercicio1/Ejercicio1/Ejercicio1.csproj
+++ b/Taller3_Punto1/Ejercicio1/Ejercicio1/Ejercicio1.csproj
@@ -51,11 +51,11 @@
     <Compile Include="Ejercicios\Ex_hora_laboral.cs" />
     <Compile Include="Ejercicios\Ex_Matricula_Estudiantil.cs" />
     <Compile Include="Ejercicios\Ex_NumerosIguales.cs" />
-    <Compile Include="Ejercicios_Formularios\Ejercicio18.cs">
+    <Compile Include="Ejercicios_Formularios\FrmEjercicio18.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ejercicios_Formularios\Ejercicio18.Designer.cs">
-      <DependentUpon>Ejercicio18.cs</DependentUpon>
+    <Compile Include="Ejercicios_Formularios\FrmEjercicio18.Designer.cs">
+      <DependentUpon>FrmEjercicio18.cs</DependentUpon>
     </Compile>
     <Compile Include="Ejercicios\SalarioN-B.cs" />
     <Compile Include="Ejercicios_Formularios\Ejercico19.cs">
@@ -64,23 +64,23 @@
     <Compile Include="Ejercicios_Formularios\Ejercico19.Designer.cs">
       <DependentUpon>Ejercico19.cs</DependentUpon>
     </Compile>
-    <Compile Include="Ejercicios_Formularios\Ex_EcuSegundoGrado.cs">
+    <Compile Include="Ejercicios_Formularios\FrmEcuSegundoGrado.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ejercicios_Formularios\Ex_EcuSegundoGrado.Designer.cs">
-      <DependentUpon>Ex_EcuSegundoGrado.cs</DependentUpon>
+    <Compile Include="Ejercicios_Formularios\FrmEcuSegundoGrado.Designer.cs">
+      <DependentUpon>FrmEcuSegundoGrado.cs</DependentUpon>
     </Compile>
-    <Compile Include="Ejercicios_Formularios\Ex_Hora_laboral.cs">
+    <Compile Include="Ejercicios_Formularios\FrmHora_laboral.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ejercicios_Formularios\Ex_Hora_laboral.Designer.cs">
-      <DependentUpon>Ex_Hora_laboral.cs</DependentUpon>
+    <Compile Include="Ejercicios_Formularios\FrmHora_laboral.Designer.cs">
+      <DependentUpon>FrmHora_laboral.cs</DependentUpon>
     </Compile>
-    <Compile Include="Ejercicios_Formularios\Ex_Matricula_Estudiantil.cs">
+    <Compile Include="Ejercicios_Formularios\FrmMatricula_Estudiantil.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ejercicios_Formularios\Ex_Matricula_Estudiantil.Designer.cs">
-      <DependentUpon>Ex_Matricula_Estudiantil.cs</DependentUpon>
+    <Compile Include="Ejercicios_Formularios\FrmMatricula_Estudiantil.Designer.cs">
+      <DependentUpon>FrmMatricula_Estudiantil.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmMenu.cs">
       <SubType>Form</SubType>
@@ -96,8 +96,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Ejercicios_Formularios\Ejercicio18.resx">
-      <DependentUpon>Ejercicio18.cs</DependentUpon>
+    <EmbeddedResource Include="Ejercicios_Formularios\FrmEjercicio18.resx">
+      <DependentUpon>FrmEjercicio18.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicios_Formularios\Ejercico19.resx">
+      <DependentUpon>Ejercico19.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMenu.resx">
       <DependentUpon>FrmMenu.cs</DependentUpon>
