--- a/Taller3_Punto1/Ejercicio1/Ejercicio1/Ejercicio1.csproj
+++ b/Taller3_Punto1/Ejercicio1/Ejercicio1/Ejercicio1.csproj
@@ -102,6 +102,9 @@
     <EmbeddedResource Include="Ejercicios_Formularios\Ejercico19.resx">
       <DependentUpon>Ejercico19.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Ejercicios_Formularios\FrmNumerosIguales.resx">
+      <DependentUpon>FrmNumerosIguales.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMenu.resx">
       <DependentUpon>FrmMenu.cs</DependentUpon>
     </EmbeddedResource>
